# CS-UY-4533

./: .gitignore  README.md
Homework/hw01/: CMakeLists.txt  hw01.cpp  hw01.tex
Homework/hw02/: fshader42.frag  hw02.cpp  vshader42.vert
Homework/hw03/: CMakeLists.txt  InitShader.cpp  fshader53.frag  hw03.cpp  sphere.128  vshader53.vert
Homework/hw04/: firework.frag  firework.vert  fshader53.frag  hw04.cpp  vshader53.vert
LectureExample/Checker-New/: checker-new.cpp  fTexture.glsl  vTexture.glsl
LectureExample/HelloOpenGL/: CMakeLists.txt  HelloOpenGL.cpp
LectureExample/Rotate-Cube-New/: Angel-yjc.hpp  CMakeLists.txt  InitShader.cpp  fshader42.frag  mat-yjc-new.hpp  rotate-cube-new.cpp  vec.hpp  vshader42.vert
LectureExample/Rotate-Cube-Shading/: fshader53.glsl  rotate-cube-shading.cpp  vshader53.glsl
